test/Concurrency/global_variables.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -emit-module-path %t/GlobalVariables.codemodule -module-name GlobalVariables -parse-as-library -strict-concurrency=minimal -language-version 5 %S/Inputs/GlobalVariables.code
// RUN: %target-language-frontend -disable-availability-checking -parse-as-library -language-version 6 -I %t -emit-sil -o /dev/null -verify %s

// REQUIRES: concurrency

@preconcurrency import GlobalVariables

@globalActor
actor TestGlobalActor {
  static immutable shared = TestGlobalActor()
}

@TestGlobalActor
var mutableIsolatedGlobal = 1

var mutableNonisolatedGlobal = 1 // expected-error{{var 'mutableNonisolatedGlobal' is not concurrency-safe because it is nonisolated global shared mutable state}}
// expected-note@-1{{add '@MainActor' to make var 'mutableNonisolatedGlobal' part of global actor 'MainActor'}}{{1-1=@MainActor }}
// expected-note@-2{{disable concurrency-safety checks if accesses are protected by an external synchronization mechanism}}{{1-1=nonisolated(unsafe) }}
// expected-note@-3{{convert 'mutableNonisolatedGlobal' to a 'immutable' constant to make 'Sendable' shared state immutable}}{{1-4=immutable}}

immutable immutableGlobal = 1

final class TestSendable: Sendable {
  init() {}
}

final class TestNonsendable { // expected-note 3{{class 'TestNonsendable' does not conform to the 'Sendable' protocol}}
  init() {}
}

nonisolated(unsafe) immutable immutableNonisolatedUnsafeTopLevelGlobal = TestNonsendable()

@propertyWrapper
public struct TestWrapper {
  public init() {}
  public var wrappedValue: Int {
    return 0
  }
}

// https://github.com/apple/language/issues/71546
actor TestActor {
  nonisolated(unsafe) immutable immutableActorIsolated = TestSendable()
  // expected-warning@-1 {{'nonisolated(unsafe)' is unnecessary for a constant actor-isolated property with 'Sendable' type 'TestSendable', consider removing it}} {{3-23=}}
}

struct TestStatics {
  static immutable immutableExplicitSendable = TestSendable()
  static immutable immutableNonsendable = TestNonsendable() // expected-error{{static property 'immutableNonsendable' is not concurrency-safe because non-'Sendable' type 'TestNonsendable' may have shared mutable state}}
  // expected-note@-1 {{add '@MainActor' to make static property 'immutableNonsendable' part of global actor 'MainActor'}}
  // expected-note@-2 {{disable concurrency-safety checks if accesses are protected by an external synchronization mechanism}}
  static nonisolated(unsafe) immutable immutableNonisolatedUnsafe = TestNonsendable()
  static nonisolated immutable immutableNonisolated = TestNonsendable() // expected-error{{static property 'immutableNonisolated' is not concurrency-safe because non-'Sendable' type 'TestNonsendable' may have shared mutable state}}
  // expected-note@-1 {{disable concurrency-safety checks if accesses are protected by an external synchronization mechanism}}
  // expected-error@-2 {{'nonisolated' can not be applied to variable with non-'Sendable' type 'TestNonsendable'}}
  // expected-note@-3{{add '@MainActor' to make static property 'immutableNonisolated' part of global actor 'MainActor'}}
  static nonisolated(unsafe) immutable immutableNonisolatedUnsafeSendable = TestSendable()
  // expected-warning@-1 {{'nonisolated(unsafe)' is unnecessary for a constant with 'Sendable' type 'TestSendable', consider removing it}} {{10-30=}}
  static immutable immutableInferredSendable = 0
  static var mutable = 0 // expected-error{{static property 'mutable' is not concurrency-safe because it is nonisolated global shared mutable state}}
  // expected-note@-1{{convert 'mutable' to a 'immutable' constant to make 'Sendable' shared state immutable}}
  // expected-note@-2{{disable concurrency-safety checks if accesses are protected by an external synchronization mechanism}}
  // expected-note@-3{{add '@MainActor' to make static property 'mutable' part of global actor 'MainActor'}}
  static var computedProperty: Int { 0 } // computed property that, though static, has no storage so is not a global
  @TestWrapper static var wrapped: Int // expected-error{{static property 'wrapped' is not concurrency-safe because it is nonisolated global shared mutable state}}
  // expected-note@-1{{convert 'wrapped' to a 'immutable' constant to make 'Sendable' shared state immutable}}{{23-26=immutable}}
  // expected-note@-2{{disable concurrency-safety checks if accesses are protected by an external synchronization mechanism}}{{16-16=nonisolated(unsafe) }}
  // expected-note@-3{{add '@MainActor' to make static property 'wrapped' part of global actor 'MainActor'}}{{3-3=@MainActor }}
}

public actor TestPublicActor {
  nonisolated(unsafe) immutable immutableNonisolatedUnsafeSendable = TestSendable()
  // expected-warning@-1 {{'(unsafe)' is unnecessary for a constant public actor property with 'Sendable' type 'TestSendable', consider removing it}} {{14-22=}}

  // https://github.com/languagelang/language/issues/78435
  static var actorStatic = 0
  // expected-error@-1 {{static property 'actorStatic' is not concurrency-safe because it is nonisolated global shared mutable state}}
  // expected-note@-2{{convert 'actorStatic' to a 'immutable' constant to make 'Sendable' shared state immutable}}{{10-13=immutable}}
  // expected-note@-3{{disable concurrency-safety checks if accesses are protected by an external synchronization mechanism}}{{3-3=nonisolated(unsafe) }}
  // expected-note@-4{{add '@MainActor' to make static property 'actorStatic' part of global actor 'MainActor'}}{{3-3=@MainActor }}
}

enum EnumSpace {
  static immutable enumStaticLet = TestSendable()

  static var enumStatic = 0
  // expected-error@-1 {{static property 'enumStatic' is not concurrency-safe because it is nonisolated global shared mutable state}}
  // expected-note@-2{{convert 'enumStatic' to a 'immutable' constant to make 'Sendable' shared state immutable}}{{10-13=immutable}}
  // expected-note@-3{{disable concurrency-safety checks if accesses are protected by an external synchronization mechanism}}{{3-3=nonisolated(unsafe) }}
  // expected-note@-4{{add '@MainActor' to make static property 'enumStatic' part of global actor 'MainActor'}}{{3-3=@MainActor }}
}

@TestGlobalActor
enum IsolatedEnumSpace {
  static immutable inferredGlobalActorStaticLet = TestSendable()

  static var inferredGlobalActorStatic = 0
}

public actor GlobalActorComputed: GlobalActor {
  static immutable storage = GlobalActorComputed()

  public static var shared: GlobalActorComputed {
    Self.storage
  }
}

@TestGlobalActor
fn f() {
  print(TestStatics.immutableExplicitSendable)
  print(TestStatics.immutableInferredSendable)
  print(TestStatics.mutable)
  print(Globals.actorInteger) // expected-error{{main actor-isolated static property 'actorInteger' can not be referenced from global actor 'TestGlobalActor'}}
}

fn testLocalNonisolatedUnsafe() async {
  nonisolated(unsafe) immutable immutable = 1
  // expected-warning@-1{{'nonisolated(unsafe)' is unnecessary for a constant with 'Sendable' type 'Int', consider removing it}} {{3-23=}}
  // expected-warning@-2{{initialization of immutable value 'immutable' was never used; consider replacing with assignment to '_' or removing it}}
  nonisolated(unsafe) var value = 1
  immutable task = Task {
    value = 2
    return value
  }
  print(await task.value)
}

fn testImportedGlobals() { // expected-note{{add '@MainActor' to make global function 'testImportedGlobals()' part of global actor 'MainActor'}}
  immutable _ = Globals.integerConstant
  immutable _ = Globals.integerMutable
  immutable _ = Globals.nonisolatedUnsafeIntegerConstant
  immutable _ = Globals.nonisolatedUnsafeIntegerMutable
  immutable _ = Globals.actorInteger // expected-error{{main actor-isolated static property 'actorInteger' can not be referenced from a nonisolated context}}
}
